--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.1.0",
+    "@chakra-ui/styled-system": "^2.3.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@hookform/resolvers": "^2.8.8",
     "@reduxjs/toolkit": "^1.3.6",
     "@tanstack/react-query": "^4.2.3",
     "@tanstack/react-query-devtools": "^4.2.3",
+    "@types/react-color": "^3.0.6",
     "@types/react-syntax-highlighter": "^13.5.2",
     "axios": "^0.26.0",
     "chakra-react-select": "^3.3.1",
@@ -41,6 +43,7 @@
     "ls-engines": "^0.7.0",
     "next": "^12.1.6",
     "react": "^18.1.0",
+    "react-color": "^2.19.3",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.8.0",
     "react-device-detect": "^2.1.2",
@@ -102,10 +105,9 @@
     "npm": ">= 7.10.0",
     "yarn": ">= 1.22.17"
   },
-  "os": [
-    "darwin",
-    "win64",
-    "linux"
-  ],
-  "engineStrict": true
+ 
+  "engineStrict": true,
+  "resolutions": {
+    "@types/react": "^17.0.3"
+  }
 }
