--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tanstack/react-query": "^4.2.3",
     "@tanstack/react-query-devtools": "^4.2.3",
     "@types/react-color": "^3.0.6",
+    "@types/react-slick": "^0.23.10",
     "@types/react-syntax-highlighter": "^13.5.2",
     "axios": "^0.26.0",
     "chakra-react-select": "^3.3.1",
@@ -51,6 +52,7 @@
     "react-hook-form": "^7.20.2",
     "react-redux": "^7.2.0",
     "react-select": "^5.2.1",
+    "react-slick": "^0.29.0",
     "react-syntax-highlighter": "^15.5.0",
     "tinycolor2": "^1.4.2",
     "yup": "^0.32.11"
@@ -84,6 +86,7 @@
     "minimist": "^1.2.6",
     "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.2",
+    "slick-carousel": "^1.8.1",
     "tokript": "^0.9.4",
     "typescript": "^4.2.4"
   },
@@ -105,7 +108,6 @@
     "npm": ">= 7.10.0",
     "yarn": ">= 1.22.17"
   },
- 
   "engineStrict": true,
   "resolutions": {
     "@types/react": "^17.0.3"
